--- a/requirements.txt
+++ b/requirements.txt
@@ -13,6 +13,7 @@ django-appconf==1.0.5
 django-bootstrap5==22.1
 django-extensions==3.2.1
 django-imagekit==4.1.0
+django-mathfilters==1.0.0
 django-summernote==0.8.20.0
 django-widget-tweaks==1.4.12
 executing==1.1.1
